--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,26 @@
+name: Bicycle rent workflow
 
+on: [push]
+
+jobs:
+
+    
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out the repo
+      uses: actions/checkout@v2
+    - name: Set up Docker Build
+      uses: docker/setup-buildx-action@v1
+    - name: Login to Docker
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME}}
+        password: ${{ secrets.DOCKER_PASSWORD}}
+    - name: Push to DockerHub
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: astalavista91/bicyclerent:latest
+  
